Se agrega scripts

--- a/index.html
+++ b/index.html
@@ -32,23 +32,7 @@
     </form>
 
 
-<script>
-
-function loguear()
-{
-
-var usuario= document.getElementById("user").value;
-
-var password= document.getElementById("password").value;
-
-if(usuario=="admin" && password=="admin")
-
-{
-window.location="menu.html";
-}
-
-
-}
+<script src="01-script.js">
 </script>
 </body>
 </html>
